--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mallam
-description: A new object classification Flutter app
+description: A new Flutter project
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,14 +27,26 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  image_picker: ^0.6.7+14
-  stacked: ^1.7.6
+  cupertino_icons: ^1.0.1
+  flutter_staggered_grid_view: ^0.3.3
+  flutter_svg: 0.22.0
+  get_it: 6.0.0
+  get: ^4.1.4
+  image_picker: ^0.7.5
+  material_design_icons_flutter: 4.0.5955
+  stacked: ^2.1.3
   tflite: ^1.1.1
 
+  dio: ^4.0.0
+  mockito: 4.1.4
+  #websafe_svg: 1.1.4
+
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_test:
     sdk: flutter
+  test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -49,7 +61,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/icons/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
